feat: add Nacos config, AI streaming, web user app and recipe data
- migrate backend configs to Nacos and add deploy/init scripts
- add AI SSE streaming endpoint and open all features
- add user-facing web app frontend/jtcsm-web-user
- import 579 recipe knowledge base entries with cover images
- update README, API and database docs